snotify added and extra component hided

--- a/src/app/profile/about/about.component.html
+++ b/src/app/profile/about/about.component.html
@@ -17,9 +17,9 @@
             <div class="h4 mt-0 title">Basic Information</div>
             <div class="row">
               <div class="col-sm-4">
-                <strong class="text-uppercase">Age:</strong>
+                <strong class="text-uppercase">Date of Birth:</strong>
               </div>
-              <div class="col-sm-8">21</div>
+              <div class="col-sm-8">May 23, 1997</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4">
@@ -37,7 +37,8 @@
               <div class="col-sm-4">
                 <strong class="text-uppercase">Address:</strong>
               </div>
-              <div class="col-sm-8">Indore, India</div>
+              <div class="col-sm-8">Vill- Jalkota, Post- Kharadi Teh- Maheshwar, Distt.- Khargone, M.P, India 451224.
+              </div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4">
