--- a/src/app/profile/portfolio/portfolio.component.html
+++ b/src/app/profile/portfolio/portfolio.component.html
@@ -15,11 +15,11 @@
                 <i class="fa fa-picture-o" aria-hidden="true"></i>
               </a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" data-toggle="tab" href="#Photography" role="tablist">
                 <i class="fa fa-camera" aria-hidden="true"></i>
               </a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
@@ -133,7 +133,7 @@
           </div>
         </div>
       </div>
-      <div class="tab-pane" id="Photography" role="tabpanel">
+      <!-- <div class="tab-pane" id="Photography" role="tabpanel">
         <div class="ml-auto mr-auto">
           <div class="row">
             <div class="col-md-6">
@@ -186,7 +186,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
