--- a/src/app/profile/education/education.component.html
+++ b/src/app/profile/education/education.component.html
@@ -1,4 +1,4 @@
-<div class="section">
+<div class="section" id="education">
   <div class="container cc-education">
     <div class="h4 text-center mb-4 title">Education</div>
     <div class="card">
