--- a/src/app/profile/footer/footer.component.html
+++ b/src/app/profile/footer/footer.component.html
@@ -1,19 +1,19 @@
 <footer class="footer">
   <div class="container text-center">
-    <a class="cc-facebook btn btn-link" href="#">
+    <a class="cc-facebook btn btn-link" href="https://www.facebook.com/Aashish.Chakravarty1" target="_blank">
       <i class="fa fa-facebook fa-2x " aria-hidden="true"></i>
     </a>
-    <a class="cc-twitter btn btn-link " href="#">
+    <a class="cc-twitter btn btn-link " href="https://twitter.com/AashishChakrava" target="_blank">
       <i class="fa fa-twitter fa-2x " aria-hidden="true"></i>
     </a>
-    <a class="cc-google-plus btn btn-link" href="#">
+    <a class="cc-google-plus btn btn-link" href="#" target="_blank">
       <i class="fa fa-google-plus fa-2x" aria-hidden="true"></i>
     </a>
-    <a class="cc-instagram btn btn-link" href="#">
+    <a class="cc-instagram btn btn-link" href="https://www.instagram.com/aashish_chakravarty" target="_blank">
       <i class="fa fa-instagram fa-2x " aria-hidden="true"></i>
     </a>
   </div>
-  <div class="h4 title text-center">Aashish Chakravarty</div>
+  <!-- <div class="h4 title text-center">Aashish Chakravarty</div> -->
   <div class="text-center text-muted">
     <p>&copy; All rights reserved.
       <!-- <br>Design - -->
