--- a/src/app/profile/header/header.component.html
+++ b/src/app/profile/header/header.component.html
@@ -19,12 +19,18 @@
             <li class="nav-item">
               <a class="nav-link smooth-scroll" href="#skill">Skills</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link smooth-scroll" href="#experience">Experience</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link smooth-scroll" href="#education">Education</a>
+            </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link smooth-scroll" href="#reference">Reference</a>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link smooth-scroll" href="#contact">Contact</a>
             </li>
