--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,10 +3,10 @@
     <app-intro></app-intro>
     <app-about></app-about>
     <app-skills></app-skills>
-    <app-portfolio></app-portfolio>
+    <!-- <app-portfolio></app-portfolio> -->
     <app-experience></app-experience>
     <app-education></app-education>
-    <app-reference></app-reference>
+    <!-- <app-reference></app-reference> -->
     <app-contact></app-contact>
 </div>
 <app-footer></app-footer>
