--- a/src/app/profile/footer/footer.component.html
+++ b/src/app/profile/footer/footer.component.html
@@ -3,15 +3,15 @@
     <a class="cc-facebook btn btn-link" href="https://www.facebook.com/Aashish.Chakravarty1" target="_blank">
       <i class="fa fa-facebook fa-2x " aria-hidden="true"></i>
     </a>
-    <a class="cc-twitter btn btn-link " href="https://twitter.com/AashishChakrava" target="_blank">
-      <i class="fa fa-twitter fa-2x " aria-hidden="true"></i>
-    </a>
-    <a class="cc-google-plus btn btn-link" href="#" target="_blank">
-      <i class="fa fa-google-plus fa-2x" aria-hidden="true"></i>
-    </a>
     <a class="cc-instagram btn btn-link" href="https://www.instagram.com/aashish_chakravarty" target="_blank">
       <i class="fa fa-instagram fa-2x " aria-hidden="true"></i>
     </a>
+    <a class="cc-twitter btn btn-link " href="https://twitter.com/AashishChakrava" target="_blank">
+      <i class="fa fa-twitter fa-2x " aria-hidden="true"></i>
+    </a>
+    <!-- <a class="cc-google-plus btn btn-link" href="#" target="_blank">
+      <i class="fa fa-google-plus fa-2x" aria-hidden="true"></i>
+    </a> -->
   </div>
   <!-- <div class="h4 title text-center">Aashish Chakravarty</div> -->
   <div class="text-center text-muted">
