--- a/src/app/profile/portfolio/portfolio.component.html
+++ b/src/app/profile/portfolio/portfolio.component.html
@@ -15,11 +15,6 @@
                 <i class="fa fa-picture-o" aria-hidden="true"></i>
               </a>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" data-toggle="tab" href="#Photography" role="tablist">
-                <i class="fa fa-camera" aria-hidden="true"></i>
-              </a>
-            </li> -->
           </ul>
         </div>
       </div>
@@ -32,20 +27,9 @@
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                 <a href="#web-development">
                   <figure class="cc-effect">
-                    <img src="assets/images/project-1.jpg" alt="Image" />
+                    <img src="assets/images/ic.jpg" alt="Image" />
                     <figcaption>
-                      <div class="h4">Recent Project</div>
-                      <p>Web Development</p>
-                    </figcaption>
-                  </figure>
-                </a>
-              </div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                <a href="#web-development">
-                  <figure class="cc-effect">
-                    <img src="assets/images/project-2.jpg" alt="Image" />
-                    <figcaption>
-                      <div class="h4">Startup Project</div>
+                      <div class="h4">College Event</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure>
@@ -56,20 +40,9 @@
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                 <a href="#web-development">
                   <figure class="cc-effect">
-                    <img src="assets/images/project-3.jpg" alt="Image" />
+                    <img src="assets/images/mitsvah.jpg" alt="Image" />
                     <figcaption>
-                      <div class="h4">Food Order Project</div>
-                      <p>Web Development</p>
-                    </figcaption>
-                  </figure>
-                </a>
-              </div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                <a href="#web-development">
-                  <figure class="cc-effect">
-                    <img src="assets/images/project-4.jpg" alt="Image" />
-                    <figcaption>
-                      <div class="h4">Web Advertising Project</div>
+                      <div class="h4">College Fest</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure>
@@ -86,21 +59,10 @@
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                 <a href="#graphic-design">
                   <figure class="cc-effect">
-                    <img src="assets/images/graphic-design-1.jpg" alt="Image" />
+                    <img src="assets/images/cafe.jpeg" alt="Image" />
                     <figcaption>
-                      <div class="h4">Triangle Pattern</div>
-                      <p>Graphic Design</p>
-                    </figcaption>
-                  </figure>
-                </a>
-              </div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                <a href="#graphic-design">
-                  <figure class="cc-effect">
-                    <img src="assets/images/graphic-design-2.jpg" alt="Image" />
-                    <figcaption>
-                      <div class="h4">Abstract Umbrella</div>
-                      <p>Graphic Design</p>
+                      <div class="h4">Sheetal Cafe</div>
+                      <p>Poster Design</p>
                     </figcaption>
                   </figure>
                 </a>
@@ -110,20 +72,9 @@
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                 <a href="#graphic-design">
                   <figure class="cc-effect">
-                    <img src="assets/images/graphic-design-3.jpg" alt="Image" />
+                    <img src="assets/images/pycon.jpeg" alt="Image" />
                     <figcaption>
-                      <div class="h4">Cube Surface Texture</div>
-                      <p>Graphic Design</p>
-                    </figcaption>
-                  </figure>
-                </a>
-              </div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                <a href="#graphic-design">
-                  <figure class="cc-effect">
-                    <img src="assets/images/graphic-design-4.jpg" alt="Image" />
-                    <figcaption>
-                      <div class="h4">Abstract Line</div>
+                      <div class="h4">Codewar Club</div>
                       <p>Graphic Design</p>
                     </figcaption>
                   </figure>
@@ -133,60 +84,6 @@
           </div>
         </div>
       </div>
-      <!-- <div class="tab-pane" id="Photography" role="tabpanel">
-        <div class="ml-auto mr-auto">
-          <div class="row">
-            <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                <a href="#Photography">
-                  <figure class="cc-effect">
-                    <img src="assets/images/photography-1.jpg" alt="Image" />
-                    <figcaption>
-                      <div class="h4">Photoshoot</div>
-                      <p>Photography</p>
-                    </figcaption>
-                  </figure>
-                </a>
-              </div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                <a href="#Photography">
-                  <figure class="cc-effect">
-                    <img src="assets/images/photography-3.jpg" alt="Image" />
-                    <figcaption>
-                      <div class="h4">Wedding Photoshoot</div>
-                      <p>Photography</p>
-                    </figcaption>
-                  </figure>
-                </a>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                <a href="#Photography">
-                  <figure class="cc-effect">
-                    <img src="assets/images/photography-2.jpg" alt="Image" />
-                    <figcaption>
-                      <div class="h4">Beach Photoshoot</div>
-                      <p>Photography</p>
-                    </figcaption>
-                  </figure>
-                </a>
-              </div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                <a href="#Photography">
-                  <figure class="cc-effect">
-                    <img src="assets/images/photography-4.jpg" alt="Image" />
-                    <figcaption>
-                      <div class="h4">Nature Photoshoot</div>
-                      <p>Photography</p>
-                    </figcaption>
-                  </figure>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div> -->
     </div>
   </div>
 </div>
