--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,9 +3,9 @@
     <app-intro></app-intro>
     <app-about></app-about>
     <app-skills></app-skills>
-    <!-- <app-portfolio></app-portfolio> -->
     <app-education></app-education>
     <app-experience></app-experience>
+    <app-portfolio></app-portfolio>
     <!-- <app-reference></app-reference> -->
     <app-contact></app-contact>
 </div>
