--- a/src/app/profile/contact/contact.component.html
+++ b/src/app/profile/contact/contact.component.html
@@ -19,11 +19,9 @@
                             <span class="input-group-addon">
                               <i class="fa fa-user-circle"></i>
                             </span>
-                            <input class="form-control" type="text" name="name" placeholder="Name" [(ngModel)]="model.name" #name="ngModel" [ngClass]="{ 'is-invalid': f.submitted && name.invalid }"
-                              required/>
-                            <!-- <div *ngIf="f.submitted && name.invalid" class="invalid-feedback">
-                                <div *ngIf="name.errors.required" class="pull-left">* Name is required</div>
-                              </div> -->
+                            <input class="form-control" type="text" name="name" placeholder="Name"
+                              [(ngModel)]="model.name" #name="ngModel"
+                              [ngClass]="{ 'is-invalid': f.submitted && name.invalid }" required />
                           </div>
                         </div>
                       </div>
@@ -33,11 +31,9 @@
                             <span class="input-group-addon">
                               <i class="fa fa-file-text"></i>
                             </span>
-                            <input class="form-control" type="text" name="subject" placeholder="Subject" [(ngModel)]="model.subject" #subject="ngModel"
-                              [ngClass]="{ 'is-invalid': f.submitted && subject.invalid }" required/>
-                            <!-- <div *ngIf="f.submitted && subject.invalid" class="invalid-feedback">
-                                <div *ngIf="subject.errors.required" class="pull-left">* Subject is required</div>
-                              </div> -->
+                            <input class="form-control" type="text" name="subject" placeholder="Subject"
+                              [(ngModel)]="model.subject" #subject="ngModel"
+                              [ngClass]="{ 'is-invalid': f.submitted && subject.invalid }" required />
                           </div>
                         </div>
                       </div>
@@ -47,23 +43,19 @@
                             <span class="input-group-addon">
                               <i class="fa fa-envelope"></i>
                             </span>
-                            <input class="form-control" type="text" name="email" placeholder="E-mail" [(ngModel)]="model.email" #email="ngModel" [ngClass]="{ 'is-invalid': f.submitted && email.invalid }"
-                              pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" required/>
-                            <!-- <div *ngIf="f.submitted && email.invalid" class="invalid-feedback">
-                                <div *ngIf="email.errors?.required" class="pull-left">* Email is required</div>
-                                <div *ngIf="email.errors?.pattern" class="pull-left">Enter must be a valid email address</div>
-                              </div> -->
+                            <input class="form-control" type="text" name="email" placeholder="E-mail"
+                              [(ngModel)]="model.email" #email="ngModel"
+                              [ngClass]="{ 'is-invalid': f.submitted && email.invalid }"
+                              pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" required />
                           </div>
                         </div>
                       </div>
                       <div class="row mb-3">
                         <div class="col">
                           <div class="form-group">
-                            <textarea class="form-control" name="message" placeholder="Your Message" [(ngModel)]="model.message" #message="ngModel" [ngClass]="{ 'is-invalid': f.submitted && message.invalid }"
-                              required></textarea>
-                            <!-- <div *ngIf="f.submitted && message.invalid" class="invalid-feedback">
-                                <div *ngIf="message.errors.required" class="pull-left">* Message is required</div>
-                              </div> -->
+                            <textarea class="form-control" name="message" placeholder="Your Message"
+                              [(ngModel)]="model.message" #message="ngModel"
+                              [ngClass]="{ 'is-invalid': f.submitted && message.invalid }" required></textarea>
                           </div>
                         </div>
                       </div>
@@ -77,10 +69,6 @@
                 </div>
                 <div class="col-md-6">
                   <div class="card-body">
-                    <!-- <p class="mb-0">
-                      <strong>Address </strong>
-                    </p>
-                    <p class="pb-2">140, City Center, New York, U.S.A</p> -->
                     <p class="mb-0">
                       <strong>Phone</strong>
                     </p>
