--- a/src/app/profile/experience/experience.component.html
+++ b/src/app/profile/experience/experience.component.html
@@ -12,11 +12,13 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Full Stack Developer</div>
-            <p>Created fully functional projects for <strong>WittyFeed</strong>, A publisher Dashboard was created using <strong>Angular 6, CodeIgniter
-              3 , Rest API and JWT (Json Web Token).</strong> It involves multiple modules like Analytics, Stories, RSS Links, Payments.
-              Another project was Influencer admin Dashboard which has features like app approval, app rejection in OneFeed
-              (WittyFeed’s personalised feed SDK) integrations. Lastly the admin dashboard for managing publishers for OneFeed.
-              </p>
+            <p>
+              Created fully functional projects for <strong>WittyFeed</strong>, A publisher Dashboard was created using
+              <strong>Angular 6, CodeIgniter 3 , Rest API and JWT (Json Web Token).</strong> It involves multiple
+              modules like Analytics, Stories, RSS Links, Payments. Another project was Influencer admin Dashboard which
+              has features like app approval, app rejection in OneFeed (WittyFeed’s personalised feed SDK) integrations.
+              Lastly the admin dashboard for managing publishers for OneFeed.
+            </p>
           </div>
         </div>
       </div>
