--- a/src/app/profile/header/header.component.html
+++ b/src/app/profile/header/header.component.html
@@ -4,8 +4,8 @@
       <div class="container">
         <div class="navbar-translate">
           <a class="navbar-brand" href="#" rel="tooltip">Aashish's CV</a>
-          <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation"
-            aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
+            aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-bar bar1"></span>
             <span class="navbar-toggler-bar bar2"></span>
             <span class="navbar-toggler-bar bar3"></span>
@@ -19,18 +19,12 @@
             <li class="nav-item">
               <a class="nav-link smooth-scroll" href="#skill">Skills</a>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a>
-            </li> -->
             <li class="nav-item">
               <a class="nav-link smooth-scroll" href="#experience">Experience</a>
             </li>
             <li class="nav-item">
               <a class="nav-link smooth-scroll" href="#education">Education</a>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link smooth-scroll" href="#reference">Reference</a>
-            </li> -->
             <li class="nav-item">
               <a class="nav-link smooth-scroll" href="#contact">Contact</a>
             </li>
