--- a/src/app/profile/intro/intro.component.html
+++ b/src/app/profile/intro/intro.component.html
@@ -1,7 +1,8 @@
 <div class="profile-page">
   <div class="wrapper">
     <div class="page-header page-header-small" filter-color="green">
-      <div class="page-header-image" data-parallax="true" style="background-image: url('assets/images/intro.jpg');"></div>
+      <div class="page-header-image" data-parallax="true" style="background-image: url('assets/images/intro.jpg');">
+      </div>
       <div class="container">
         <div class="content-center">
           <div class="cc-profile-image">
@@ -11,29 +12,38 @@
           </div>
           <div class="h2 title">Aashish Chakravarty</div>
           <p class="category text-white">Web Developer, Graphic Designer</p>
-          <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a>
-          <a class="btn btn-primary" href="https://drive.google.com/file/d/1CEcj12MpMZV5sr3DRPABrdfDqE3OlXZg/view?usp=sharing" target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in"
+            data-aos-anchor="data-aos-anchor">Hire Me</a>
+          <a class="btn btn-primary"
+            href="https://drive.google.com/file/d/1CEcj12MpMZV5sr3DRPABrdfDqE3OlXZg/view?usp=sharing" target="_blank"
+            data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <div class="section">
         <div class="container">
           <div class="button-container">
-            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.facebook.com/Aashish.Chakravarty1" target="_blank" rel="tooltip" title="Follow me on Facebook">
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.facebook.com/Aashish.Chakravarty1"
+              target="_blank" rel="tooltip" title="Follow me on Facebook">
               <i class="fa fa-facebook"></i>
             </a>
-            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.instagram.com/aashish_chakravarty" target="_blank" rel="tooltip" title="Follow me on Instagram">
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.instagram.com/aashish_chakravarty"
+              target="_blank" rel="tooltip" title="Follow me on Instagram">
               <i class="fa fa-instagram"></i>
             </a>
-            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/AashishChakravarty" target="_blank" rel="tooltip" title="Follow me on Linkedin">
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/AashishChakravarty"
+              target="_blank" rel="tooltip" title="Follow me on Linkedin">
               <i class="fa fa-linkedin"></i>
             </a>
-            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://github.com/AashishChakravarty" target="_blank" rel="tooltip" title="Follow me on Github">
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://github.com/AashishChakravarty"
+              target="_blank" rel="tooltip" title="Follow me on Github">
               <i class="fa fa-github"></i>
             </a>
-            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://twitter.com/AashishChakrava" target="_blank" rel="tooltip" title="Follow me on Twitter">
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://twitter.com/AashishChakrava"
+              target="_blank" rel="tooltip" title="Follow me on Twitter">
               <i class="fa fa-twitter"></i>
             </a>
-            <a class="btn btn-default btn-round btn-lg btn-icon" href="#" target="_blank" rel="tooltip" title="Follow me on Google+">
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="#" target="_blank" rel="tooltip"
+              title="Follow me on Google+">
               <i class="fa fa-google-plus"></i>
             </a>
           </div>
