--- a/src/app/profile/skills/skills.component.html
+++ b/src/app/profile/skills/skills.component.html
@@ -8,8 +8,9 @@
             <div class="progress-container progress-primary">
               <span class="progress-badge">Angular 6</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar"
-                  aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10"
+                  data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
+                  style="width: 85%;"></div>
                 <span class="progress-value">85%</span>
               </div>
             </div>
@@ -18,8 +19,9 @@
             <div class="progress-container progress-primary">
               <span class="progress-badge">PHP/Codeigniter</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar"
-                  aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10"
+                  data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
+                  style="width: 80%;"></div>
                 <span class="progress-value">80%</span>
               </div>
             </div>
@@ -30,8 +32,9 @@
             <div class="progress-container progress-primary">
               <span class="progress-badge">C++</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar"
-                  aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10"
+                  data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
+                  style="width: 80%;"></div>
                 <span class="progress-value">80%</span>
               </div>
             </div>
@@ -40,8 +43,9 @@
             <div class="progress-container progress-primary">
               <span class="progress-badge">Python</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar"
-                  aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10"
+                  data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
+                  style="width: 75%;"></div>
                 <span class="progress-value">75%</span>
               </div>
             </div>
@@ -52,8 +56,9 @@
             <div class="progress-container progress-primary">
               <span class="progress-badge">Adobe Illustrator</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar"
-                  aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10"
+                  data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
+                  style="width: 75%;"></div>
                 <span class="progress-value">75%</span>
               </div>
             </div>
@@ -62,8 +67,9 @@
             <div class="progress-container progress-primary">
               <span class="progress-badge">Data Structure</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar"
-                  aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10"
+                  data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
+                  style="width: 70%;"></div>
                 <span class="progress-value">70%</span>
               </div>
             </div>
