extra component hide

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -5,7 +5,7 @@
     <app-skills></app-skills>
     <app-education></app-education>
     <app-experience></app-experience>
-    <app-portfolio></app-portfolio>
+    <!-- <app-portfolio></app-portfolio> -->
     <!-- <app-reference></app-reference> -->
     <app-contact></app-contact>
 </div>
